[b][color=orange]v5.60[/color], 27.01.2023[/b][list]
[*]Real fix for ScenarioUI error[/list]