@@ -12,8 +12,12 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Real fix for ScenarioUI error",
-
+		"• Wrath: I dont support he MicroBar on non Retail anymore, since too much code differences",
+		"• Updated Port Spells on the Location Bar. Thx @Goldur <3",
+		"• Some Code Changes to the Bags",
+		"• Updated Feast Timer on the World Map",
+		"• Updated Objective Tracker",
+		"• Lots of changes to the Skins",
 		" ",
 
 	"Notes:",
