@@ -1,4 +1,8 @@
 ### Changes ###
 
-  * Real fix for ScenarioUI error
-
+  * Wrath: I dont support he MicroBar on non Retail anymore, since too much code differences
+  * Updated Port Spells on the Location Bar. Thx @Goldur <3
+  * Some Code Changes to the Bags
+  * Updated Feast Timer on the World Map
+  * Updated Objective Tracker
+  * Lots of changes to the Skins
