@@ -1,2 +1,7 @@
-[b][color=orange]v5.60[/color], 27.01.2023[/b][list]
-[*]Real fix for ScenarioUI error[/list]
+[b][color=orange]v5.61[/color], 07.02.2023[/b][list]
+[*]Wrath: I dont support he MicroBar on non Retail anymore, since too much code differences
+[*]Updated Port Spells on the Location Bar. Thx @Goldur <3
+[*]Some Code Changes to the Bags
+[*]Updated Feast Timer on the World Map
+[*]Updated Objective Tracker
+[*]Lots of changes to the Skins[/list]
